# savrr

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/savr-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/savr-app/src-tauri/capabilities/: default.json
crates/savr-app/src-tauri/icons/: icon.icns
crates/savr-app/src-tauri/src/: commands.rs  daemon.rs  error.rs  ipc_client.rs  lib.rs  main.rs
crates/savr-app/ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/savr-app/ui/src/: App.svelte  app.css
crates/savr-app/ui/src/components/: Icon.svelte  Spinner.svelte  ToastHost.svelte
crates/savr-app/ui/src/lib/: api.ts  devlog.ts  devmode.ts  format.ts  toasts.ts  types.ts  updater.ts
crates/savr-app/ui/src/views/: AddGameDialog.svelte  Conflicts.svelte  Dashboard.svelte  Games.svelte  Logs.svelte  Pairing.svelte  Roots.svelte  Settings.svelte
crates/savr-core/: Cargo.toml
crates/savr-core/src/: archive.rs  error.rs  hash.rs  ipc.rs  lib.rs  manifest.rs  protocol.rs  snapshot.rs  types.rs
crates/savr-daemon/: Cargo.toml
crates/savr-daemon/src/: autostart.rs  backup.rs  client.rs  config.rs  engine.rs  ipc.rs  lib.rs  logs.rs  main.rs  manifest_sync.rs  naming.rs  notify.rs  paths.rs  restore.rs  scan.rs  secrets.rs  state.rs  tray.rs  ws.rs
crates/savr-daemon/src/detection/: exe_index.rs  mod.rs  steam.rs
crates/savr-daemon/tests/: custom_catalog.rs  ipc_dispatch.rs  manifest_real.rs
crates/savr-server/: Cargo.toml
crates/savr-server/migrations/: 0001_init.sql  0002_auth_and_sync.sql
crates/savr-server/src/: api.rs  auth.rs  blobs.rs  db.rs  error.rs  hub.rs  lib.rs  main.rs  ws.rs
crates/savr-server/tests/: backup_flow.rs  config_concurrency.rs  ensure_game_dedup.rs  pairing_refresh.rs  resolve_conflict.rs  retention_gc.rs  ws_replay.rs
crates/savr-server/tests/common/: mod.rs
docker/: Dockerfile  docker-compose.yml
docs/: KNOWN-ISSUES.md
docs/prd/: PRD-00-Overview.md  PRD-01-Architecture.md  PRD-02-Detection-Engine.md  PRD-03-Sync-Engine.md  PRD-04-Server-API.md  PRD-05-Data-Models.md  PRD-06-Security-Auth.md  PRD-07-Deployment.md  PRD-08-Roadmap-MVP.md
docs/superpowers/plans/: 2026-07-08-non-steam-games-phase1.md
docs/superpowers/specs/: 2026-07-08-non-steam-games-phase1-design.md
scripts/: stage-sidecar.sh
