[package]
name = "savr-app"
edition.workspace = true
license.workspace = true
version.workspace = true

# Standard Tauri 2 layout: a library that holds the whole app (so it can be
# reused by the mobile entrypoints) plus a thin binary that calls `run()`.
[lib]
name = "savr_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
# app + daemon both need the length-prefixed IPC frame codec (feature = "ipc").
savr-core = { path = "../../savr-core", features = ["ipc"] }

# tray-icon: the app owns the system tray so it can live in the background
# while the window is hidden and keep the bundled daemon running.
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
# Needed so the updater flow can relaunch the app after installing.
tauri-plugin-process = "2"
# Spawns the bundled daemon sidecar (declared in tauri.conf.json externalBin).
tauri-plugin-shell = "2"
# Native OS toasts for game start/close + backup outcomes, sent from Rust.
tauri-plugin-notification = "2"

# interprocess gives one abstraction over unix sockets / windows named pipes;
# the "tokio" feature yields streams that impl tokio AsyncRead/AsyncWrite, which
# is exactly what savr_core::ipc::{read_frame,write_frame} require.
interprocess = { version = "2", features = ["tokio"] }

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
dirs.workspace = true
tokio.workspace = true
tracing.workspace = true

# Forwards a second launch to the running instance so we never start two apps
# (hence two daemons fighting over the socket + DB). Desktop-only — `desktop`
# isn't a cargo dep-resolution cfg, so express it as "not mobile".
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
